[gd_scene load_steps=15 format=3 uid="uid://ck4f0qj3vnbv8"]

[ext_resource type="Script" uid="uid://xubj75m2bonq" path="res://entities/character/character.gd" id="1_cruhx"]
[ext_resource type="PackedScene" uid="uid://b52y2oas5lxmi" path="res://components/plateformer/input/input_component.tscn" id="2_jfevv"]
[ext_resource type="PackedScene" uid="uid://b8lnsm0ycy7q7" path="res://components/plateformer/animation/animation_component.tscn" id="3_r6v5b"]
[ext_resource type="PackedScene" uid="uid://cqd5fgbu71wo1" path="res://components/plateformer/movement/movement_component.tscn" id="4_cruhx"]
[ext_resource type="PackedScene" uid="uid://cvpkfp4tvqwfs" path="res://components/plateformer/gravity/gravity_component.tscn" id="5_r6v5b"]
[ext_resource type="PackedScene" uid="uid://dnyjwuojx7raw" path="res://components/graber/selector/selector_component.tscn" id="7_ppst4"]
[ext_resource type="PackedScene" uid="uid://mr106ev7cge1" path="res://components/graber/graber/graber_component.tscn" id="8_dyycr"]
[ext_resource type="Texture2D" uid="uid://wbkshkkmqyib" path="res://assets/personna.png" id="9_4ya86"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ceyjw"]
atlas = ExtResource("9_4ya86")
region = Rect2(0, 0, 15, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ya86"]
atlas = ExtResource("9_4ya86")
region = Rect2(15, 0, 15, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_0vyii"]
atlas = ExtResource("9_4ya86")
region = Rect2(30, 0, 15, 20)

[sub_resource type="SpriteFrames" id="SpriteFrames_vwd7k"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ceyjw")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ya86")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0vyii")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_swflu"]
height = 25.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ppst4"]
size = Vector2(1, 1)

[node name="Character" type="CharacterBody2D" node_paths=PackedStringArray("animation_component", "gravity_component", "input_component", "movement_component", "selector_component", "grabber_component")]
z_index = 10
collision_mask = 3
script = ExtResource("1_cruhx")
animation_component = NodePath("AnimationComponent")
gravity_component = NodePath("GravityComponent")
input_component = NodePath("InputComponent")
movement_component = NodePath("MovementComponent")
selector_component = NodePath("SelectorComponent")
grabber_component = NodePath("GraberComponent")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
scale = Vector2(1.7, 1.7)
sprite_frames = SubResource("SpriteFrames_vwd7k")
animation = &"walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("CapsuleShape2D_swflu")

[node name="InputComponent" parent="." instance=ExtResource("2_jfevv")]

[node name="AnimationComponent" parent="." node_paths=PackedStringArray("sprite") instance=ExtResource("3_r6v5b")]
sprite = NodePath("../Sprite2D")

[node name="MovementComponent" parent="." instance=ExtResource("4_cruhx")]
speed = 200.0

[node name="GravityComponent" parent="." instance=ExtResource("5_r6v5b")]

[node name="SelectorComponent" parent="." instance=ExtResource("7_ppst4")]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="SelectorComponent"]
shape = SubResource("RectangleShape2D_ppst4")

[node name="GrabPosition" type="Node2D" parent="."]
position = Vector2(0, -40)

[node name="DropPosition" type="Node2D" parent="."]
position = Vector2(40, 0)

[node name="GraberComponent" parent="." node_paths=PackedStringArray("grabbing_position", "drop_position") instance=ExtResource("8_dyycr")]
grabbing_position = NodePath("../GrabPosition")
drop_position = NodePath("../DropPosition")
